@startuml Entities

'Tables

'Utilisateurs

entity User {
    *id : int
    *fullName: varchar
    *email : varchar
    *password: varchar
    *created_at : datetime
    *role : varchar
}

'Equipes

entity Team {
    *id: int
    *name: varchar
    *description: text
}

'Evenements

entity Event {
    *id: int
    *title: varchar
    *type: varchar 
    *date: datetime
    *description: text
}

'Contacts

entity Contact {
    *id: int
    *fullName: varchar
    *type: varchar
    *role: varchar
    company: varchar
    address: varchar
    phone: varchar
    email: varchar
    website: varchar
}

'Relations

'Un utilisateur peut appartenir à une seule équipe (0,1)
'Une équipe peut regrouper un ensemble d'utilisateurs (0,n)

User |o..o{ Team

'Un utilisateur peut avoir plusieurs événements (0,n)
'Un événement appartient à un seul utilisateur (1,1)

User }o..|| Event

'Un utilisateur peut avoir plusieurs contacts (0,n)
'Un contact appartient à un seul utilisateur (1,1)

User }o..|| Contact
@enduml